--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Intro to testing for OP5",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --recursive test/"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
